# EventBookingSystem

./: .coderabbit.yaml  .dockerignore  .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml  start.sh
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0861afed7159_add_confirm_password.py  29e2cff797a6_removed_condition_for_confirm_password.py  3987ece53554_init.py  4273a52d5a08_update_booking_model.py  47f2aaf083d2_change_role_to_enum.py  4a530dfaef54_changes.py  5eec7a76f143_small_change.py  7f29d47dc5e2_added_on_cascade.py  872db4e17d61_remove_confirm_password_from_user.py  b86f20359f13_cleanup.py  c1d319a7d794_add_cascading_deletes.py  c8e199881203_add_capacity_to_event.py  d42e05f78417_updating_changes.py  fab230995c52_added_on_cascade.py  fe4dc8970019_change_role_to_string.py
app/api/v1/endpoints/: auth.py  bookings.py  chatbot.py  dashboard.py  events.py
app/api/v1/endpoints/admin/: auth.py  dashboard.py  users.py
app/api/v1/routers/: __init__.py
app/core/: config.py  redis.py  security.py  utils.py
app/db/: async_session.py
app/db/models/: __init__.py  booking.py  event.py  user.py
app/schemas/: admin.py  booking.py  chatbot.py  event.py  user.py
app/services/: admin_service.py  booking_service.py  chatbot_instructions.py  chatbot_service.py  chatbot_tools.py  event_service.py  user_service.py
