[project]
name = "rbactask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis>=5.0.1",
    "alembic>=1.18.4",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "argon2-cffi>=25.1.0",
    "async-timeout>=5.0.1",
    "asyncpg>=0.31.0",
    "cffi>=2.0.0",
    "click>=8.3.1",
    "cryptography>=46.0.4",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "exceptiongroup>=1.3.1",
    "fastapi>=0.128.7",
    "greenlet>=3.3.1",
    "h11>=0.16.0",
    "idna>=3.11",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
    "starlette>=0.52.1",
    "tomli>=2.4.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvicorn>=0.40.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
