[project]
name = "rbactask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis>=5.0.1",
    "alembic>=1.18.4",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "argon2-cffi>=25.1.0",
    "async-timeout>=5.0.1",
    "asyncpg>=0.31.0",
    "cffi>=2.0.0",
    "click>=8.3.1",
    "cryptography>=46.0.4",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "exceptiongroup>=1.3.1",
    "fastapi>=0.128.7",
    "greenlet>=3.3.1",
    "h11>=0.16.0",
    "idna>=3.11",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
    "starlette>=0.52.1",
    "tomli>=2.4.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvicorn>=0.40.0",
    "slowapi>=0.1.9",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langgraph>=1.0.8",
    "anthropic>=0.81.0",
    "jupyter>=1.1.1",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.0",
    "langsmith>=0.7.3",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "langgraph-checkpoint-redis>=0.3.5",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
